# timesfm_time

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  settings.example.toml
docs/: 策略说明与调优指南.md
scripts/: daily_scan.sh
src/: __init__.py  backtester.py  config.py  data_loader.py  macro_analyzer.py  main.py  market_report.py  model_wrapper.py  signal_dispatcher.py  signal_runner.py  strategy.py  visualizer.py
src/plugins/: __init__.py  base.py  console_plugin.py  feishu_plugin.py
