[project]
name = "timesfm-quant"
version = "0.2.0"
description = "基于 Google TimesFM 2.5 的量化交易回测框架，支持美股 / A 股 + 宏观因子分析"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.14.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=2.0.0",
    "scipy>=1.17.1",
    "timesfm>=1.3.0",
    "torch>=2.11.0",
    "yfinance>=0.2.31",
]
